vlib/v/checker/tests/option_map_or_unwrap_mut_source_err.out
vlib/v/checker/tests/option_map_or_unwrap_mut_source_err.vv:17:7: error: cannot copy map: call `move` or `clone` method (or use a reference)
   15 |         'x': 1
   16 |     }
   17 |     a := opt or { panic('missing') }
      |          ~~~
   18 | 
   19 |     mut c := Category{
vlib/v/checker/tests/option_map_or_unwrap_mut_source_err.vv:24:9: error: cannot copy map: call `move` or `clone` method (or use a reference)
   22 |         }
   23 |     }
   24 |     b := c.translations or { panic('missing') }
      |            ~~~~~~~~~~~~
   25 | 
   26 |     inner := {
vlib/v/checker/tests/option_map_or_unwrap_mut_source_err.vv:32:14: error: cannot copy map: call `move` or `clone` method (or use a reference)
   30 |         'a': ?map[string]int(inner)
   31 |     }
   32 |     d := m['a'] or { panic('missing') }
      |                 ~~~~~~~~~~~~~~~~~~~~~~~
   33 | 
   34 |     println(a)
