vlib/v/checker/tests/option_map_or_unwrap_mut_source_err.vv
// Or-unwrapping an option map into an immutable local is only safe when the
// *source* can never be mutated later. If the source (variable, field, or index)
// is mutable, the immutable local still aliases the same map storage and would
// observe a later mutation, so the map-copy guard must stay. See vlang/v issue
// #27867 (only immutable-source unwraps like `c := Category{}; x := c.f or {...}`
// are exempted).
struct Category {
mut:
	translations ?map[string]int
}

fn main() {
	mut opt := ?map[string]int(none)
	opt = {
		'x': 1
	}
	a := opt or { panic('missing') }

	mut c := Category{
		translations: {
			'x': 1
		}
	}
	b := c.translations or { panic('missing') }

	inner := {
		'x': 1
	}
	mut m := {
		'a': ?map[string]int(inner)
	}
	d := m['a'] or { panic('missing') }

	println(a)
	println(b)
	println(d)
}
